[package]
name = "dswt"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"


[dependencies]

tokio = { version = "1.38.0", features = ["full"] }

base64 = "0.22.1"

hmac = "0.12.1"
sha2 = "0.10.8"

rand = "0.8.5"

serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = "1.0.117"