[package]

name = "dswt"
description = "An alternate webtoken format"
authors = ["ash-entwisle"]

license = "AGPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"

repository = "https://github.com/ash-entwisle/dswt"
homepage = "https://github.com/ash-entwisle/dswt"

version = "0.1.3"
edition = "2021"


[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"


[dependencies]

base64 = "0.22.1"

hmac = "0.12.1"
sha2 = "0.10.8"

rand = "0.8.5"

serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = "1.0.117"


